--- a/ByteBankSample/ByteBankWebMVC/Views/_ViewImports.cshtml
+++ b/ByteBankSample/ByteBankWebMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ByteBankWebMVC
 @using ByteBankWebMVC.Models
+@using ByteBankLib.Models.Response
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
