--- a/ByteBankSample/ByteBankWebMVC/Views/Home/Index.cshtml
+++ b/ByteBankSample/ByteBankWebMVC/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <a>https://localhost:44305/Home/Teste</a>
+    <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">Privacy</a>
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
