--- a/CasaDoCodigo/CasaDoCodigo/Views/Pedido/Cadastro.cshtml
+++ b/CasaDoCodigo/CasaDoCodigo/Views/Pedido/Cadastro.cshtml
@@ -1,4 +1,7 @@
-﻿<h3>Cadastro</h3>
+﻿@{ 
+    ViewData["Model"] = "Cadastro";
+}
+<h3>Cadastro</h3>
 
 <div class="panel panel-default">
     <div class="panel-body">
