--- a/CasaDoCodigo/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
+++ b/CasaDoCodigo/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
@@ -1,4 +1,7 @@
-﻿<h3>Meu Carrinho</h3>
+﻿@{
+    ViewData["Model"] = "Carrinho";
+}
+<h3>Meu Carrinho</h3>
 
 <div class="panel panel-default">
     <div class="panel-heading">
@@ -126,10 +129,10 @@
 <div class="row">
     <div class="col-md-12">
         <div class="pull-right">
-            <a class="btn btn-success" href="/">
+            <a class="btn btn-success" asp-action="Carrossel">
                 Adicionar Produtos
             </a>
-            <a class="btn btn-success" href="/">
+            <a class="btn btn-success" asp-action="Cadastro">
                 Preencher Cadastro
             </a>
         </div>
