--- a/CasaDoCodigo/CasaDoCodigo/Views/Product/Carrossel.cshtml
+++ b/CasaDoCodigo/CasaDoCodigo/Views/Product/Carrossel.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Model"] = "Carrossel";
 }
-@model List<CasaDoCodigo.Models.Entities.Produto>
+@model List<CasaDoCodigo.Models.Entities.Product>
 
 <h3>Catálogo</h3>
 
@@ -33,8 +33,8 @@
                                         <div class="text-center">
                                             <a 
                                                asp-controller="Pedido" 
-                                               asp-action="Carrinho" 
-                                               asp-route-codigo="@produto.Codigo"
+                                               asp-action="AddProductToCart" 
+                                               asp-route-productCode="@produto.Codigo"
                                                class="btn btn-success">Adicionar</a>
                                         </div>
                                     </div>
