--- a/CasaDoCodigo/CasaDoCodigo/Views/Product/Carrossel.cshtml
+++ b/CasaDoCodigo/CasaDoCodigo/Views/Product/Carrossel.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Model"] = "Carrossel";
 }
-@model List<CasaDoCodigo.Models.Entities.Product>
+@model List<CasaDoCodigo.Models.Entities.Produto>
 
 <h3>Catálogo</h3>
 
