--- a/CasaDoCodigo/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
+++ b/CasaDoCodigo/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
@@ -1,5 +1,5 @@
-﻿@{
-    
+﻿@model CasaDoCodigo.Models.Entities.Pedido
+@{
     ViewData["Model"] = "Carrinho";
 }
 <h3>Meu Carrinho</h3>
@@ -25,97 +25,47 @@
         </div>
     </div>
     <div class="panel-body">
-        <div class="row row-center linha-produto">
-            <div class="col-md-3">
-                <img class="img-produto-carrinho" src="/images/produtos/large_047.jpg" />
-            </div>
-            <div class="col-md-3">Arduino Pr&#xE1;tico</div>
-            <div class="col-md-2 text-center">R$ 69,90</div>
-            <div class="col-md-2 text-center">
-                <div class="input-group">
-                    <span class="input-group-btn">
-                        <button class="btn btn-default">
-                            <span class="glyphicon-minus"></span>
-                        </button>
-                    </span>
-                    <input type="text" value="2"
-                           class="form-control text-center" />
-                    <span class="input-group-btn">
-                        <button class="btn btn-default">
-                            <span class="glyphicon-plus"></span>
-                        </button>
-                    </span>
+        @{
+            foreach (var item in Model.Itens)
+            {
+                <div class="row row-center linha-produto">
+                    <div class="col-md-3">
+                        <img class="img-produto-carrinho" src="/images/produtos/large_@(item.Produto.Codigo.ToString("D3")).jpg" />
+                    </div>
+                    <div class="col-md-3">@(item.Produto.Nome)</div>
+                    <div class="col-md-2 text-center">R$ @(item.Produto.Nome)</div>
+                    <div class="col-md-2 text-center">
+                        <div class="input-group">
+                            <span class="input-group-btn">
+                                <button class="btn btn-default">
+                                    <span class="glyphicon-minus"></span>
+                                </button>
+                            </span>
+                            <input type="text" value="2"
+                                   class="form-control text-center" />
+                            <span class="input-group-btn">
+                                <button class="btn btn-default">
+                                    <span class="glyphicon-plus"></span>
+                                </button>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        R$ <span class="pull-right" subtotal>
+                            @(item.Produto.Preco * item.Quantidade)
+                        </span>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-2">
-                R$ <span class="pull-right" subtotal>
-                    139,80
-                </span>
-            </div>
-        </div>
-        <div class="row row-center linha-produto">
-            <div class="col-md-3">
-                <img class="img-produto-carrinho" src="/images/produtos/large_035.jpg" />
-            </div>
-            <div class="col-md-3">PostgreSQL</div>
-            <div class="col-md-2 text-center">R$ 69,90</div>
-            <div class="col-md-2 text-center">
-                <div class="input-group">
-                    <span class="input-group-btn">
-                        <button class="btn btn-default">
-                            <span class="glyphicon-minus"></span>
-                        </button>
-                    </span>
-                    <input type="text" value="3"
-                           class="form-control text-center" />
-                    <span class="input-group-btn">
-                        <button class="btn btn-default">
-                            <span class="glyphicon-plus"></span>
-                        </button>
-                    </span>
-                </div>
-            </div>
-            <div class="col-md-2">
-                R$ <span class="pull-right" subtotal>
-                    209,70
-                </span>
-            </div>
-        </div>
-        <div class="row row-center linha-produto">
-            <div class="col-md-3">
-                <img class="img-produto-carrinho" src="/images/produtos/large_042.jpg" />
-            </div>
-            <div class="col-md-3">Scala</div>
-            <div class="col-md-2 text-center">R$ 69,90</div>
-            <div class="col-md-2 text-center">
-                <div class="input-group">
-                    <span class="input-group-btn">
-                        <button class="btn btn-default">
-                            <span class="glyphicon-minus"></span>
-                        </button>
-                    </span>
-                    <input type="text" value="1"
-                           class="form-control text-center" />
-                    <span class="input-group-btn">
-                        <button class="btn btn-default">
-                            <span class="glyphicon-plus"></span>
-                        </button>
-                    </span>
-                </div>
-            </div>
-            <div class="col-md-2">
-                R$ <span class="pull-right" subtotal>
-                    69,90
-                </span>
-            </div>
-        </div>
+            }
+        }
+
+
     </div>
     <div class="panel-footer">
         <div class="row">
             <div class="col-md-10">
                 <span numero-itens>
-                    Total: 3
-                    itens
+                    Total: @(Model.Itens.Count)
                 </span>
             </div>
             <div class="col-md-2">
@@ -130,7 +80,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="pull-right">
-            <a class="btn btn-success" asp-action="Carrossel">
+            <a class="btn btn-success" asp-controller="Product" asp-action="Carrossel">
                 Adicionar Produtos
             </a>
             <a class="btn btn-success" asp-action="Cadastro">
