--- a/CasaDoCodigo/CasaDoCodigo/Views/Product/Carrossel.cshtml
+++ b/CasaDoCodigo/CasaDoCodigo/Views/Product/Carrossel.cshtml
@@ -31,11 +31,10 @@
                                         <div class="produto-nome">@(produto.Nome)</div>
                                         <div><h4><strong>R$@(produto.Preco.ToString())</strong></h4></div>
                                         <div class="text-center">
-                                            <a 
-                                               asp-controller="Pedido" 
-                                               asp-action="AddProductToCart" 
-                                               asp-route-productCode="@produto.Codigo"
-                                               class="btn btn-success">Adicionar</a>
+                                            <form method="post" action="pedido/AddProductToCart">
+                                                <input type="hidden" value="@produto.Codigo" name="ProductCode">
+                                                <button type="submit" class="btn btn-success">Adicionar</button>
+                                            </form>
                                         </div>
                                     </div>
 
@@ -59,3 +58,7 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
+
+@section Scripts{
+}
+
