--- a/CasaDoCodigo/CasaDoCodigo/Views/Product/Carrossel.cshtml
+++ b/CasaDoCodigo/CasaDoCodigo/Views/Product/Carrossel.cshtml
@@ -31,10 +31,7 @@
                                         <div class="produto-nome">@(produto.Nome)</div>
                                         <div><h4><strong>R$@(produto.Preco.ToString())</strong></h4></div>
                                         <div class="text-center">
-                                            <form method="post" action="pedido/AddProductToCart">
-                                                <input type="hidden" value="@produto.Codigo" name="ProductCode">
-                                                <button type="submit" class="btn btn-success">Adicionar</button>
-                                            </form>
+                                            <button onclick="AddProductToCart(@produto.Codigo)" class="btn btn-success">Adicionar</button>
                                         </div>
                                     </div>
 
@@ -60,5 +57,23 @@
 </div>
 
 @section Scripts{
+    <script>
+        function AddProductToCart(productCode) {
+            $.ajax({
+                type: 'POST',
+                dataType: 'json',
+                url: 'Pedido/AddProductToCart',
+                async: false,
+                data: {
+                    request: {
+                        productCode: productCode
+                    }
+                }
+            });
+
+            window.location.href = '@Url.Action("Cart","Pedido")'
+        }
+
+    </script>
 }
 
