--- a/CasaDoCodigo/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
+++ b/CasaDoCodigo/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
@@ -37,14 +37,14 @@
                     <div class="col-md-2 text-center">
                         <div class="input-group">
                             <span class="input-group-btn">
-                                <button class="btn btn-default">
+                                <button onclick="MinusButtonAction(@item.Produto.Codigo)" class="btn btn-default">
                                     <span class="glyphicon-minus"></span>
                                 </button>
                             </span>
-                            <input type="text" value="@(item.Quantidade)"
+                            <input id="@item.Produto.Codigo" type="text" onchange="SetItemAmount(@(item.Produto.Codigo), this)"  value="@(item.Quantidade)"
                                    class="form-control text-center" />
                             <span class="input-group-btn">    
-                                <button onclick="AddProductToCart(@item.Produto.Codigo)" class="btn btn-default" >
+                                <button onclick="PlusButtonAction(@item.Produto.Codigo)" class="btn btn-default" >
                                     <span class="glyphicon-plus"></span>
                                 </button>
                             </span>
@@ -53,7 +53,7 @@
                     <div class="col-md-2">
                         R$ <span class="pull-right" subtotal>
                             @(item.Produto.Preco * item.Quantidade)
-                        </span> 
+                        </span>
                     </div>
                 </div>
             }
@@ -90,8 +90,11 @@
 
 @section Scripts{ 
     <script>
-        function AddProductToCart(productCode) {
-            console.log(productCode);
+        function PlusButtonAction(productCode) {
+
+            var elValue = document.getElementById(productCode).value;
+            document.getElementById(productCode).value  = Number(elValue) + 1;
+            
             $.ajax({
                 url: '/Pedido/AddProductToCart',
                 type: 'POST',
@@ -99,7 +102,49 @@
                 async: false,
                 data: {
                     request: {
-                        productCode: productCode
+                        productCode: productCode,
+                        amount: 1
+                    }
+                },
+                success: function () {
+                    var elValue = document.getElementById(productCode).value;
+                    document.getElementById(productCode).value = Number(elValue) + 1;
+                }
+            });
+        }
+
+        function MinusButtonAction(productCode) {
+            $.ajax({
+                url: '/Pedido/AddProductToCart',
+                type: 'POST',
+                dataType: 'json',
+                async: false,
+                data: {
+                    request: {
+                        productCode: productCode,
+                        amount: -1
+                    }
+                },
+                success: function () {
+                    var elValue = document.getElementById(productCode).value;
+                    document.getElementById(productCode).value = Number(elValue) - 1;
+                }
+            });
+        }
+
+        function SetItemAmount(productCode, element) {
+
+            var amount = element.value;
+
+            $.ajax({
+                url: '/Pedido/PlusButtonAction',
+                type: 'POST',
+                dataType: 'json',
+                async: false,
+                data: {
+                    request: {
+                        productCode: productCode,
+                        amount: amount
                     }
                 }
             });
