--- a/CasaDoCodigo/CasaDoCodigo/Views/Product/Carrossel.cshtml
+++ b/CasaDoCodigo/CasaDoCodigo/Views/Product/Carrossel.cshtml
@@ -66,7 +66,8 @@
                 async: false,
                 data: {
                     request: {
-                        productCode: productCode
+                        productCode: productCode,
+                        amount: 1
                     }
                 }
             });
