--- a/CasaDoCodigo/CasaDoCodigo/Views/Shared/_Layout.cshtml
+++ b/CasaDoCodigo/CasaDoCodigo/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
-
+    @RenderSection("ImportScripts", required:false)
     @RenderSection("Scripts", required: false)
 </body>
 </html>
